--- a/assets/LESS/mid-content.less
+++ b/assets/LESS/mid-content.less
@@ -1,5 +1,4 @@
 .mid-content {
-  //.flex(space-between);
   width: 100%;
   
   .mid-content-icons {
@@ -8,6 +7,11 @@
     padding: 20px 0;
     margin-bottom: 30px;
     border-radius: 10px;
+
+    img {
+      height: 120px;
+      margin-bottom: 10px;
+    }
  
     @media (width: 550px) {
       display: block;
@@ -17,6 +21,7 @@
   img {
     border-radius: 10px;
     border: 3px solid black;
+    
 
     &:hover {
       background-color: white;
