--- a/assets/LESS/navBar.less
+++ b/assets/LESS/navBar.less
@@ -20,7 +20,7 @@ header {
       text-align: center;
       position: fixed;
       background-color: @bg-color;
-      left: 35%;
+      left: 38%;
     }
   }
 
