--- a/assets/LESS/testimonials.less
+++ b/assets/LESS/testimonials.less
@@ -4,9 +4,9 @@
     font-size: 40px;
     font-family: @header-font;
     text-align: center;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
     margin-bottom: 40px;
-    border-bottom: 1px dashed black;
+    border-bottom: 3px dashed @bg-color;
   }
   .person {
     border: 2px solid @bg-color;
@@ -21,6 +21,7 @@
       p {
         margin-right: 20px;
         line-height: 2;
+        padding-top: 20px;
       }
     }
 
@@ -34,7 +35,7 @@
     }
 
     .person-text {
-      max-width: 20%;
+      max-width: 400px;;
       margin-left: 20px;
     }
   }
