--- a/assets/LESS/top-content.less
+++ b/assets/LESS/top-content.less
@@ -1,18 +1,26 @@
 .top-content {
   .flex(space-around);
-  margin: 100px 0 20px 0;
+  margin: 100px 20px 20px 20px;
 
   .top-content-text {
+
+    width: 60%;
+
     h1 {
       display: block;
       font-size: 30px;
       margin-bottom: 15px;
       padding-left: 10px;
     }
+
+    @media (max-width: 800px) {
+      width: 95%;
+    }
   }
 
   .tip-receive {
     display: flex;
+    justify-content: space-between;
     width: 100%;
     padding: 10px;
 
@@ -32,7 +40,7 @@
 
     .tip {
       margin-bottom: 30px;
-      //width: 50%;
+      margin-right: 20px;
     }
 
     .give-tip {
@@ -42,10 +50,6 @@
         background-color: @text-color;
         color: white;
       }
-    }
-
-    .receive {
-      //width: 50%;
     }
 
     .receive-tip {
@@ -64,7 +68,7 @@
   }
 
   .top-content-img {
-    max-width: 50%;
+    max-width: 40%;
     .flex(center, center);
 
     img {
